--- a/.travis.yml
+++ b/.travis.yml
@@ -4,41 +4,34 @@ language: cpp
 
 os:
   - linux
-  - osx
+#  - osx
 
 compiler:
   - clang
-  - gcc
+  #- gcc
 
 addons:
   apt:
     sources:
-      - boost-latest
-      - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise-3.6
+#      - boost-latest
+      #- ubuntu-toolchain-r-test
+#      - llvm-toolchain-precise-3.6
     packages:
-      - g++-4.9
-      - clang-3.6
-      - libboost-system1.55-dev
+      #- g++-4.9
+#      - clang-3.6
+#      - libboost-system1.55-dev
 
 script:
   # Debug
-  - date ; uname -a ; pwd ; ls -l ..; echo $HOSTNAME
-  # Build
-  - mkdir ../build && cd ../build 
-  - echo $PATH; echo $LD_LIBRARY_PATH
-  - which $CXX
-  - cmake ../wdt -DBUILD_TESTING=1 
-  #- make -j 4 VERBOSE=1
-  - make -j 4
-  - WDT_TEST_SYMLINKS=0 CTEST_OUTPUT_ON_FAILURE=1 make test
-  # to see the full output/debug:
-  #- ../wdt_e2e_simple_test.sh
+  - date ; uname -a ; pwd ; ls -l ..; echo $HOSTNAME $USER
+  - mkdir /tmp/testWDT
+  - df -h /tmp/testWDT
+  - cat /etc/fstab
+  - ulimit -a
 
 before_install:
   - echo "Travis os name $TRAVIS_OS_NAME"
-  # will change PATH so we find cmake,...
-  - source ./travis_${TRAVIS_OS_NAME}.sh
+  #- source ./travis_${TRAVIS_OS_NAME}.sh
 
 language: cpp
 
