--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,11 @@ addons:
 script:
   # Debug
   - date ; uname -a ; pwd ; ls -l ..; echo $HOSTNAME $USER
+  - which openssl
   - openssl version -a
   - nc -6 -l 12345 > /dev/null & echo foo | nc -6 -v ::1 12345
+  - dpkg -s openssl
+  - dpkg -L openssl
 
 before_install:
   - echo "Travis os name $TRAVIS_OS_NAME"
