--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,10 @@ script:
   - nc -6 -l 12345 > /dev/null & echo foo | nc -6 -v ::1 12345
   - dpkg -s openssl
   - dpkg -L openssl
-  - dpkg -s libssl
-  - dpkg -L libssl
+  - ldd `which openssl`
+  - dpkg -S  /lib/x86_64-linux-gnu/libcrypto.so.1.0.0
+#  - dpkg -s libssl
+#  - dpkg -L libssl
 
 before_install:
   - echo "Travis os name $TRAVIS_OS_NAME"
